--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Lokesh Sharma",
   "license": "ISC",
   "dependencies": {
+    "child_process": "^1.0.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.5.1",
