--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "child_process": "^1.0.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "mongoose": "^7.5.1",
     "nodemon": "^3.0.1"
   }
