--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "child_process": "^1.0.2",
+    "child-process": "^1.0.2",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
+    "fs": "^0.0.1-security",
     "mongoose": "^7.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
